generated/manifests/prod-axon/kube-prometheus-stack/ValidatingWebhookConfiguration-kube-prometheus-stack-admission.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: monitoring/kube-prometheus-stack-admission
    certmanager.k8s.io/inject-ca-from: monitoring/kube-prometheus-stack-admission
  labels:
    app: kube-prometheus-stack-admission
    app.kubernetes.io/component: prometheus-operator-webhook
    app.kubernetes.io/instance: kube-prometheus-stack
    app.kubernetes.io/name: kube-prometheus-stack-prometheus-operator
    app.kubernetes.io/part-of: kube-prometheus-stack
    chart: kube-prometheus-stack-91.8.0
    heritage: Helm
    release: kube-prometheus-stack
  name: kube-prometheus-stack-admission
webhooks:
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: kube-prometheus-stack-operator
        namespace: monitoring
        path: /admission-prometheusrules/validate
    failurePolicy: Ignore
    name: prometheusrulevalidate.monitoring.coreos.com
    rules:
      - apiGroups:
          - monitoring.coreos.com
        apiVersions:
          - '*'
        operations:
          - CREATE
          - UPDATE
        resources:
          - prometheusrules
    sideEffects: None
    timeoutSeconds: 10
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: kube-prometheus-stack-operator
        namespace: monitoring
        path: /admission-alertmanagerconfigs/validate
    failurePolicy: Ignore
    name: alertmanagerconfigsvalidate.monitoring.coreos.com
    rules:
      - apiGroups:
          - monitoring.coreos.com
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - alertmanagerconfigs
    sideEffects: None
    timeoutSeconds: 10
